Update OpenShift configurations

--- a/components/oadp-configuration/backup-storage-credentials.yaml
+++ b/components/oadp-configuration/backup-storage-credentials.yaml
@@ -1,4 +1,10 @@
 ---
+# WARNING: This is a template file with placeholder values
+# For security, this secret should be created using one of the following methods:
+# 1. GitHub Actions with sealed secrets (recommended for GitOps)
+# 2. Manual deployment with real values (not committed to Git)
+# 3. External Secrets Operator with Vault integration
+# 4. Helm values override during deployment
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,9 +12,16 @@ metadata:
   namespace: openshift-adp
   annotations:
     argocd.argoproj.io/sync-wave: "15"
+    # Exclude from GitOps sync - deploy manually or via sealed secret
+    argocd.argoproj.io/sync-options: "SkipDryRunOnMissingResource=true"
 type: Opaque
 stringData:
   cloud: |
     [default]
-    aws_access_key_id=jqNj4v6H0CNdJfwFrrIa
-    aws_secret_access_key=SNNGRb6aNvSh2MBdRn9Li/E7uLbko8Vef64FyRTu
+    # PLACEHOLDER: These values should NEVER contain real credentials in Git
+    # Real values should be provided via:
+    # - GitHub Secrets: OADP_AWS_ACCESS_KEY_ID, OADP_AWS_SECRET_ACCESS_KEY
+    # - Vault path: secret/openshift/{env}/oadp/aws_access_key_id and aws_secret_access_key
+    # - Manual oc command with real credentials
+    aws_access_key_id=PLACEHOLDER_AWS_ACCESS_KEY_ID_REPLACE_ME
+    aws_secret_access_key=PLACEHOLDER_AWS_SECRET_ACCESS_KEY_REPLACE_ME
