--- a/components/oauth-configuration/azure-ad-client-secret.yaml
+++ b/components/oauth-configuration/azure-ad-client-secret.yaml
@@ -1,4 +1,10 @@
 ---
+# WARNING: This is a template file with placeholder values
+# For security, this secret should be created using one of the following methods:
+# 1. GitHub Actions with sealed secrets (recommended for GitOps)
+# 2. Manual deployment with real values (not committed to Git)
+# 3. External Secrets Operator with Vault integration
+# 4. Helm values override during deployment
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,9 +12,13 @@ metadata:
   namespace: openshift-config
   annotations:
     argocd.argoproj.io/sync-wave: "10"
+    # Exclude from GitOps sync - deploy manually or via sealed secret
+    argocd.argoproj.io/sync-options: "SkipDryRunOnMissingResource=true"
 type: Opaque
 stringData:
-  # IMPORTANT: Replace this placeholder with the actual Azure AD client secret
-  # You can get the current secret value using:
-  # oc get secret openid-client-secret-gfmkl -n openshift-config -o jsonpath='{.data.clientSecret}' | base64 -d
-  clientSecret: "REPLACE_WITH_ACTUAL_AZURE_AD_CLIENT_SECRET"
+  # PLACEHOLDER: This value should NEVER contain real secrets in Git
+  # Real value should be provided via:
+  # - GitHub Secret: AZURE_AD_CLIENT_SECRET
+  # - Vault path: secret/openshift/{env}/oauth/azure_ad_client_secret
+  # - Manual oc command: oc create secret generic openid-client-secret-azuread --from-literal=clientSecret="real-secret-here"
+  clientSecret: "PLACEHOLDER_AZURE_AD_CLIENT_SECRET_REPLACE_ME"
