Configure kohler-openshift repository connection to ArgoCD
- Updated root application to use https://github.com/rich-p-ai/kohler-openshift.git
- Configured root application to point to DR cluster (clusters/dr)
- Updated Helm chart configuration for proper ArgoCD integration
- Added repository secret for ArgoCD repository management
- Added kohler-openshift applications for components and groups
- Updated groups/all/values.yaml to include kohler-specific applications
- Added deployment scripts for repository connection

--- a/groups/all/values.yaml
+++ b/groups/all/values.yaml
@@ -18,6 +18,29 @@ projects:
 
 applications:
 
+  # Kohler OpenShift Platform Components
+  kohler-openshift-components:
+    annotations:
+      argocd.argoproj.io/sync-wave: '20'
+    destination:
+      namespace: openshift-gitops
+    source:
+      path: components
+      directory:
+        recurse: true
+        include: "*/kustomization.yaml"
+
+  # Kohler Groups and RBAC Configuration
+  kohler-groups-config:
+    annotations:
+      argocd.argoproj.io/sync-wave: '15'
+    destination:
+      namespace: openshift-gitops
+    source:
+      path: groups
+      directory:
+        recurse: true
+
   cert-manager-operator:
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
