--- a/.bootstrap/3.root-application.yaml
+++ b/.bootstrap/3.root-application.yaml
@@ -20,9 +20,12 @@ spec:
 
   # Source of the application manifests
   source:
-    repoURL: ${gitops_repo}  # Can point to either a Helm chart repo or a git repo.
-    targetRevision: HEAD  # For Helm, this refers to the chart version.
-    path: clusters/${cluster_name}  # This has no meaning for Helm charts pulled directly from a Helm repo instead of git.
+    repoURL: https://github.com/rich-p-ai/kohler-openshift.git
+    targetRevision: HEAD
+    helm:
+      valueFiles:
+        - ../../../clusters/dr/values.yaml
+    path: .helm/charts/argocd-app-of-app
 
   # Destination cluster and namespace to deploy the application
   destination:
