Fix DR values.yaml projects structure and clean up syntax
- Fixed projects section to match Helm chart template expectations
- Updated project description from OCP-DEV to OCP-DR
- Cleaned up malformed YAML at end of file
- Added proper annotations for notifications
- Used template variables for sourceRepos instead of hardcoded URLs
- Validated Helm template rendering successfully

--- a/clusters/dr/values.yaml
+++ b/clusters/dr/values.yaml
@@ -252,15 +252,17 @@ applications:
 # Project Configuration
 projects:
   cluster-config:
-    description: "Core cluster infrastructure configuration for OCP-DEV"
+    annotations:
+      notifications.argoproj.io/subscribe.on-sync-failed.slack: cluster-gitops
+      notifications.argoproj.io/subscribe.on-health-degraded.slack: cluster-gitops
+    description: "Core cluster infrastructure configuration for OCP-DR"
+    namespace: openshift-gitops
     sourceRepos:
-    - "https://github.com/rich-p-ai/kohler-openshift.git"
-    destinations:
-    - namespace: "*"
-      server: "https://kubernetes.default.svc"
-    clusterResourceWhitelist:
-    - group: "*"
-      kind: "*"
-    namespaceResourceWhitelist:
-    - group: "*"
-      kind: "*"
+    - "{{ .Values.default.app.source.repoURL }}"
+    destinations: |
+      - namespace: '*'
+        server: https://kubernetes.default.svc
+    extraFields: |
+      clusterResourceWhitelist:
+      - group: '*'
+        kind: '*'
