--- a/.bootstrap/1.operatorgroup.clusterwide.yaml
+++ b/.bootstrap/1.operatorgroup.clusterwide.yaml
@@ -4,6 +4,6 @@ kind: OperatorGroup
 metadata:
   name: openshift-gitops-operator
   namespace: openshift-gitops-operator
-spec:
-  targetNamespaces:
-  - openshift-gitops-operator
+spec: {}
+
+
