--- a/.bootstrap/6.root-application.yaml
+++ b/.bootstrap/6.root-application.yaml
@@ -24,7 +24,7 @@ spec:
     targetRevision: HEAD
     helm:
       valueFiles:
-        - ../../../clusters/dr/values.yaml
+        - ../../../clusters/<cluster>/values.yaml
     path: .helm/charts/argocd-app-of-app
 
   # Destination cluster and namespace to deploy the application
