Update root application configuration and ocp2 values
- Update .bootstrap/6.root-application.yaml configuration
- Update clusters/ocp2/values.yaml configuration

--- a/.bootstrap/6.root-application.yaml
+++ b/.bootstrap/6.root-application.yaml
@@ -24,7 +24,7 @@ spec:
     targetRevision: HEAD
     helm:
       valueFiles:
-        - ../../../clusters/<cluster>/values.yaml
+        - ../../../clusters/ocp2/values.yaml
     path: .helm/charts/argocd-app-of-app
 
   # Destination cluster and namespace to deploy the application
