Add GitOps-safe htpasswd authentication for immediate cluster access
- Add htpasswd identity provider as primary authentication method
- Keep Azure AD configuration for future use
- Update documentation with usage instructions
- Maintain security best practices with encrypted passwords

--- a/components/oauth-configuration/kustomization.yaml
+++ b/components/oauth-configuration/kustomization.yaml
@@ -6,5 +6,6 @@ metadata:
     argocd.argoproj.io/sync-wave: "10"
 namespace: openshift-config
 resources:
+  - ./htpasswd-users.yaml
   - ./azure-ad-client-secret.yaml
   - ./oauth-cluster-config.yaml
