Add HashiCorp Vault and Vault Secrets Operator (VSO) components
- Create vault-deployment component with automated initialization and unsealing
- Create vault-secrets-operator component for Kubernetes-native secret management
- Update ocp2 values.yaml to enable both Vault components
- Add comprehensive deployment guide and documentation
- Include proper RBAC, security contexts, and OpenShift integration
- Configure for ODF storage and ocp2 cluster domain

--- a/clusters/ocp2/values.yaml
+++ b/clusters/ocp2/values.yaml
@@ -205,17 +205,29 @@ applications:
   #   destination:
   #     namespace: open-cluster-management
       
-  # vault-config-operator:
-  #   enabled: false  # Vault integration - enable if needed
-  #   labels:
-  #     component: security
-  #     phase: advanced
-  #   source:
-  #     path: components/vault-config-operator
-  #   destination:
-  #     namespace: vault-config-operator
-  #   syncOptions:
-  #   - CreateNamespace=true
+  vault-deployment:
+    enabled: true
+    labels:
+      component: security
+      phase: advanced
+    source:
+      path: components/vault-deployment
+    destination:
+      namespace: vault-system
+    syncOptions:
+    - CreateNamespace=true
+
+  vault-secrets-operator:
+    enabled: true
+    labels:
+      component: security
+      phase: advanced
+    source:
+      path: components/vault-secrets-operator
+    destination:
+      namespace: vault-secrets-system
+    syncOptions:
+    - CreateNamespace=true
     
   # kube-ops-view:
   #   enabled: false  # Cluster visualization - enable if needed
