Fix sync wave ordering for Vault deployment jobs
- Move vault-init job from sync wave 6 to 10 (PostSync)
- Move vault-unseal job from sync wave 7 to 11 (PostSync)
- Move vault-config job from sync wave 8 to 12 (PostSync)
- Ensures jobs run after Vault deployment is ready and service account exists
- Fixes 'serviceaccount not found' error in vault-init job

--- a/components/vault-deployment/init-job.yaml
+++ b/components/vault-deployment/init-job.yaml
@@ -5,8 +5,8 @@ metadata:
   name: vault-init
   namespace: vault-system
   annotations:
-    argocd.argoproj.io/sync-wave: "6"
-    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/sync-wave: "10"
+    argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
   labels:
     app: vault
