--- a/components/odf-infrastructure/odf-infra-machineset.yaml
+++ b/components/odf-infrastructure/odf-infra-machineset.yaml
@@ -14,12 +14,12 @@ metadata:
     app.kubernetes.io/name: odf-infrastructure
     app.kubernetes.io/part-of: openshift-data-foundation
     app.kubernetes.io/component: storage-nodes
-  spec:
-    replicas: 3
-    selector:
-      matchLabels:
-        machine.openshift.io/cluster-api-cluster: ocp2-sz7qn
-        machine.openshift.io/cluster-api-machineset: ocp2-sz7qn-odf-infra
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      machine.openshift.io/cluster-api-cluster: ocp2-sz7qn
+      machine.openshift.io/cluster-api-machineset: ocp2-sz7qn-odf-infra
   template:
     metadata:
       labels:
@@ -40,51 +40,23 @@ metadata:
       metadata: {}
       providerSpec:
         value:
-          # Compute Resources - Optimized for ODF Storage
-          numCoresPerSocket: 2
-          memoryMiB: 65536  # 64 GB memory for ODF workloads
-          numCPUs: 8        # 8 CPUs for storage operations
-          
-          # Storage Configuration
-          diskGiB: 250      # OS disk
-          disk1GiB: 2048    # Data disk for ODF (2TB)
-          disk2GiB: 1024    # Additional data disk (1TB)
-          
-          # Network Configuration
-          network:
-            devices:
-              - networkName: VLAN225
-          
-          # Credentials and User Data
-          userDataSecret:
-            name: worker-user-data
+          apiVersion: machine.openshift.io/v1beta1
+          kind: VSphereMachineProviderSpec
           credentialsSecret:
             name: vsphere-cloud-credentials
-          
-          # VSphere Provider Configuration
-          kind: VSphereMachineProviderSpec
-          apiVersion: machine.openshift.io/v1beta1
-          
-          # Workspace Configuration
+          diskGiB: 250
+          memoryMiB: 65536
+          metadata:
+            creationTimestamp: null
+          network:
+            devices:
+            - networkName: VLAN225
+          numCPUs: 8
+          numCoresPerSocket: 2
+          server: uswivc02.kohlerco.com
+          template: ocp2-sz7qn-rhcos-generated-region-generated-zone
           workspace:
             datacenter: VxRail-Datacenter
             datastore: /VxRail-Datacenter/datastore/VxRail-Virtual-SAN-Datastore-3424f606-f285-4436-9c7e-f1497032666a
             folder: /VxRail-Datacenter/vm/openshiftocp1/
             resourcePool: /VxRail-Datacenter/host/VXRail-LinuxProd/Resources
-            server: uswivc02.kohlerco.com
-          
-                      # RHCOS Template
-            template: ocp2-sz7qn-rhcos-generated-region-generated-zone
-          
-          # Failure Domain Configuration
-          failureDomain: default_domain
-          
-          # Additional Storage Policies
-          diskType: thin
-          cloneMode: fullClone
-          
-          # Network Interface Configuration
-          networkDevices:
-            - networkName: VLAN225
-              dhcp4: true
-              dhcp6: false
