--- a/components/odf-infrastructure/cluster-info.yaml
+++ b/components/odf-infrastructure/cluster-info.yaml
@@ -11,7 +11,7 @@ metadata:
     app.kubernetes.io/part-of: openshift-data-foundation
     app.kubernetes.io/component: storage-nodes
 data:
-  cluster-name: "ocp2-sz7qn"
+  cluster-name: "ocp-prd-jmq98"
   cluster-domain: "kohlerco.com"
   cluster-type: "production"
   storage-platform: "vsphere"
